@@ -2,6 +2,7 @@ import SwiftUI
 
 struct InPersonPaymentsStripeAccountPending: View {
     let deadline: Date?
+    let onSkip: () -> ()
 
     var body: some View {
         InPersonPaymentsOnboardingError(
@@ -9,12 +10,16 @@ struct InPersonPaymentsStripeAccountPending: View {
             message: message,
             image: InPersonPaymentsOnboardingErrorMainContentView.ImageInfo(
                 image: .paymentErrorImage,
-                height: 180.0
+                height: Constants.imageHeight
             ),
             supportLink: true,
-            learnMore: true
+            learnMore: true,
+            button: InPersonPaymentsOnboardingError.ButtonInfo(
+                text: Localization.skipButton,
+                action: onSkip
+            )
         )
-      }
+    }
 
     private var message: String {
         guard let deadline = deadline else {
@@ -28,31 +33,32 @@ struct InPersonPaymentsStripeAccountPending: View {
 private enum Localization {
     static let title = NSLocalizedString(
         "Your payments account has pending requirements",
-        comment: "Title for the error screen when the merchant's In-Person Payments account is restricted because there are pending requirements"
+        comment: "Title for the error screen when the merchant's In-Person Payments account has pending " +
+        "requirements which will result in their account being restricted if not resolved by a deadline"
     )
 
     static let messageDeadline = NSLocalizedString(
         "There are pending requirements for your account. Please complete those requirements by %1$@ to keep accepting In-Person Payments.",
-        comment: "Error message when In-Person Payments is not supported because there are pending requirements in the merchant's payment account."
-            +
-            "%1$d will contain the localized deadline (e.g. August 11, 2021)"
+        comment: "Error message when because there are pending requirements in the merchant's " +
+        "In-Person Payments account. %1$d will contain the localized deadline (e.g. August 11, 2021)"
     )
 
     static let messageUnknownDeadline = NSLocalizedString(
         "There are pending requirements for your account. Please complete those requirements to keep accepting In-Person Payments.",
-        comment: "Error message when In-Person Payments is not supported"
-            +
-            "There are pending requirements in the merchant's payment account (without a known deadline)"
+        comment: "Error message when there are pending requirements in the merchant's payment account (without a known deadline)"
     )
 
-     static let message = NSLocalizedString(
-         "There are pending requirements for your account. Please complete those requirements by",
-         comment: "Error message when the Stripe account is restricted because there are pending requirements"
-     )
- }
+    static let skipButton = NSLocalizedString(
+        "Skip",
+        comment: "Title for the button to skip the onboarding step informing the merchant of pending account requirements")
+}
 
 struct InPersonPaymentsStripeAccountPending_Previews: PreviewProvider {
     static var previews: some View {
-        InPersonPaymentsStripeAccountPending(deadline: Date())
+        InPersonPaymentsStripeAccountPending(deadline: Date(), onSkip: {})
     }
+}
+
+private enum Constants {
+    static let imageHeight: CGFloat = 180.0
 }
